# rusty_ytdl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/args/: log.rs  mod.rs  output.rs  video_options.rs
cli/src/commands/: download.rs  mod.rs
cli/src/utils/: mod.rs  result_serializer.rs
examples/: blocking.rs  cookies.rs  download.rs  download_to_file.rs  download_with_ffmpeg.rs  ipv6.rs  multiple_downloads.rs  proxy.rs  reuse_client.rs  search.rs  suggestion.rs
src/: constants.rs  info.rs  info_extras.rs  lib.rs  main.rs  structs.rs  utils.rs
src/blocking/: info.rs  mod.rs
src/blocking/search/: mod.rs  youtube.rs
src/blocking/stream/: mod.rs  streams.rs
src/blocking/stream/streams/: live.rs  mod.rs  non_live.rs
src/live_stream/: mod.rs
src/search/: mod.rs  youtube.rs
src/stream/: encryption.rs  hashable_byte_range.rs  media_format.rs  mod.rs  remote_data.rs  segment.rs  stream.rs  streams.rs
src/stream/streams/: live.rs  mod.rs  non_live.rs
tests/: download.rs  download_live_video.rs  download_to_file.rs  download_with_blocking_chunks.rs  download_with_chunks.rs  ffmpeg_download_test.rs  ffmpeg_test.rs  get_info.rs  get_info_blocking.rs  get_info_with_options.rs  get_live_video_info.rs  ipv6_generate.rs  regex.rs  search.rs  search_playlist.rs  static_formats.rs  suggestion.rs
