[package]
name = "rusty_ytdl"
version = "0.6.7"
authors = ["Mithronn"]
edition = "2021"
description = "A Rust library for Youtube video searcher and downloader"
repository = "https://github.com/Mithronn/rusty-ytdl"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["youtube", "downloader", "ytdl", "youtube-dl", "searcher"]
include = ["src/**/*", "Cargo.toml"]
exclude = ["examples/**/*", "tests/**/*", ".github/**/*"]
categories = ["multimedia::video", "multimedia::audio"]
rust-version = "1.70.0"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [".", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = [
    "cookies",
    "gzip",
], default-features = false }
scraper = "0.19.0"
serde = "1.0.197"
serde_json = "1.0.114"
serde_qs = "0.12.0"
regex = "1.10.3"
url = "2.5.0"
urlencoding = "2.1.3"
thiserror = "1.0.57"
derive_more = "0.99.17"
derivative = "2.2.0"
once_cell = "1.19.0"
tokio = { version = "1.36.0", default-features = false, features = ["sync"] }
rand = "0.8.5"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.4.0"
m3u8-rs = "6.0.0"
async-trait = "0.1.77"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
hex = "0.4.3"
unicode-segmentation = "1.11.0"
boa_engine = "0.17.3"
mime = "0.3.17"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }

[features]
default = ["search", "live", "default-tls"]
live = ["tokio/time", "tokio/process"]
blocking = ["tokio/rt", "tokio/rt-multi-thread"]
search = []
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
