[package]
name = "rusty_ytdl"
version = "0.7.1"
authors = ["Mithronn"]
edition = "2021"
description = "A Rust library for Youtube video searcher and downloader"
repository = "https://github.com/Mithronn/rusty-ytdl"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["youtube", "downloader", "ytdl", "youtube-dl", "searcher"]
include = ["src/**/*", "Cargo.toml"]
exclude = ["examples/**/*", "tests/**/*", ".github/**/*"]
categories = ["multimedia::video", "multimedia::audio"]
rust-version = "1.70.0"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [".", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = [
    "cookies",
    "gzip",
], default-features = false }
scraper = "0.19.0"
serde = "1.0.198"
serde_json = "1.0.116"
serde_qs = "0.13.0"
regex = "1.10.4"
url = "2.5.0"
urlencoding = "2.1.3"
thiserror = "1.0.59"
derive_more = "0.99.17"
derivative = "2.2.0"
once_cell = "1.19.0"
tokio = { version = "1.37.0", default-features = false, features = ["sync"] }
rand = "0.8.5"
reqwest-middleware = { version = "0.3.0", features = ["json"] }
reqwest-retry = "0.5.0"
m3u8-rs = "6.0.0"
async-trait = "0.1.80"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
hex = "0.4.3"
boa_engine = "0.18.0"
boa_parser = "0.18.0"
mime = "0.3.17"
bytes = "1.6.0"
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.5.0", optional = true }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
default = ["search", "live", "default-tls"]
performance_analysis = ["flame", "flamer"]
live = ["tokio/time", "tokio/process"]
blocking = ["tokio/rt", "tokio/rt-multi-thread"]
search = []
ffmpeg = ["tokio/process"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[[example]]
name = "multiple_downloads"
path = "examples/multiple_downloads.rs"
required-features = ["performance_analysis"]

[[example]]
name = "blocking"
path = "examples/blocking.rs"
required-features = ["blocking"]

[[example]]
name = "download_with_ffmpeg"
path = "examples/download_with_ffmpeg.rs"
required-features = ["ffmpeg"]
