[package]
name = "rusty_ytdl-cli"
version = "0.6.1"
authors = ["Mithronn"]
edition = "2021"
description = "A CLI for rusty_ytdl"
keywords = ["youtube", "downloader", "ytdl", "youtube-dl","searcher"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/Mithronn/rusty-ytdl"
include = [
    "src/**/*", "Cargo.toml",
]

[[bin]]
name = "rusty_ytdl"
path = "src/main.rs"

[dependencies]
clap = "4.3.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
# rusty_ytdl = { version = "0.6.1", features = ["blocking"]}
rusty_ytdl = { path = "../"}
colored = "2.0.0"
indicatif = "0.17.4"